--- a/_posts/blog/2016-7-10-model.md
+++ b/_posts/blog/2016-7-10-model.md
@@ -7,8 +7,9 @@ category: blog
 >Was vernünftig ist, das ist Wirklich, undwas wirklich ist, das ist vernünftig.			
 > -- <cite>Hegel</cite>			
 
-		
-##1. 基本模型
+#Test
+	
+## 基本模型
 基于控制理论的基本模型		
 
 ###抽象模型系统框架
@@ -26,22 +27,22 @@ category: blog
 
 
 			
-###抽象市场模型
+### 抽象市场模型
 从系统角度来看, 供给作为input输入市场, 产生价格, 价格信号反馈给供给者, 调节供给, 实现动态反馈过程. 同时需求也作为input输入市场, 产生价格, 信号反馈回需求者, 调节需求, 实现动态反馈过程. 
 
 价格信号不只是单纯的输出信息, 更会影响系统的输入, 推动系统运转, 从而影响输出. 更高的价格往往会推动更多供给, 抑制更多需求, 从而实现均衡, 市场自发的资源重新配置. 但当经济或市场系统出现问题时, 信号会失灵, 甚至更高的价格会引来更多的需求, 此时市场远离均衡, 并形成趋势. 一个真正的趋势会拥有自己的运行规律, 和一个强大的机制(比如错误的偏见). 这种规律和机制很少受外部力量的影响, 从这种意义上说: 
 > 一个人所不能左右的是自己的命运, 所有人都不能左右的是趋势.  -- <cite> 岭峰资本 </cite>
 ###均衡状态
 
-###远离均衡状态
+### 远离均衡状态
 
-##2. 泡沫模型 (正反馈模型)
+## 2. 泡沫模型 (正反馈模型)
 
 >存在并不一定正确, 因不正确也可以存在.
 
-##3. 负反馈模型
+## 3. 负反馈模型
 
-##4. 庞氏模型
+## 4. 庞氏模型
 
 ##5. 波动模型
 
