updated all ## syntax

--- a/_posts/blog/2016-7-10-model.md
+++ b/_posts/blog/2016-7-10-model.md
@@ -7,9 +7,7 @@ category: blog
 >Was vernünftig ist, das ist Wirklich, undwas wirklich ist, das ist vernünftig.			
 > -- <cite>Hegel</cite>			
 
-#Test
-	
-## 基本模型
+## 1. 基本模型
 基于控制理论的基本模型		
 
 ###抽象模型系统框架
@@ -44,7 +42,7 @@ category: blog
 
 ## 4. 庞氏模型
 
-##5. 波动模型
+## 5. 波动模型
 
 
 
